--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "*.{js,jsx,ts,tsx}": ["pretty-quick --write", "eslint --fix"]
+  "*.{js,jsx,ts,tsx}": ["pretty-quick --write", "eslint --fix", "jest"]
 }
