refactor: rename InputFilter to SearchInput refactor: change title on all stories according path fix: solve itemsType errors feat: create Filter Container feat: create Home Presentation and use on index route feat: add TransactionsProvider on app.tsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   ],
   "rules": {
     "react/no-unescaped-entities": "off",
+    "@typescript-eslint/no-extra-semi": "off",
     "import-helpers/order-imports": [
       "warn",
       {
