--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@next/font": "13.0.7",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.7",
     "format-currency": "^1.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rm": "^0.1.8",
     "styled-breakpoints": "^11.1.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4",
