--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.7",
     "format-currency": "^1.0.0",
@@ -62,6 +63,8 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "msw": "^0.49.2",
+    "msw-storybook-addon": "^1.6.3",
     "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
     "stylelint": "^14.16.0",
@@ -71,5 +74,8 @@
     "ts-jest": "^29.0.3",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "webpack": "^5.75.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
